--- a/src/app/admin/login-page/login-page.component.html
+++ b/src/app/admin/login-page/login-page.component.html
@@ -13,7 +13,9 @@
     {{message}}
   </div>
 
-  <div class="form-control">
+  <div class="form-control"
+       [ngClass]="{invalid: form.get('email')?.touched && form.get('email')?.invalid}"
+  >
     <label for="email">To Email:</label>
     <input id="email" type="text" formControlName="email">
     <div
@@ -30,7 +32,9 @@
     </div>
   </div>
 
-  <div class="form-control">
+  <div class="form-control"
+       [ngClass]="{invalid: form.get('password')?.touched && form.get('password')?.invalid}"
+  >
     <label for="password">To Password:</label>
     <input id="password" type="password" formControlName="password">
     <div
