--- a/src/app/pages/counterpick/heroes-pick/heroes-pick.component.html
+++ b/src/app/pages/counterpick/heroes-pick/heroes-pick.component.html
@@ -2,24 +2,38 @@
   <div>
     <h1>Heroes Of DOTA 2</h1>
 
-  </div>
-  <div class="cards" >
-    <div class="cardHero" *ngFor="let nHero of heroesDataService.newHeroesData"
-    >
+    <div
+      *ngIf="heroes$ | async as heroes; else loading"
+      class="cards">
+      <div
+        class="cardHero"
+        *ngFor="let hero of heroes">
         <img
-          [routerLink]="['/counterpick', nHero.id]"
-          src="{{nHero.icon}}" alt="{{nHero.name}}"
+          [routerLink]="['/counterpick', hero.id]"
+          src="{{hero.icon}}" alt="{{hero.icon}}"
         >
-        <p [appHeroesCard]="'bold'" color="blueviolet" style="text-align: center">{{nHero.name}}</p>
+        <p [appHeroesCard]="'bold'" color="blueviolet" style="text-align: center">{{hero.name}}</p>
+      </div>
     </div>
-  </div>
+
+<!--  </div>-->
+<!--  <div class="cards" >-->
+<!--    <div class="cardHero" *ngFor="let nHero of heroesDataService.newHeroesData"-->
+<!--    >-->
+<!--        <img-->
+<!--          [routerLink]="['/counterpick', nHero.id]"-->
+<!--          src="{{nHero.icon}}" alt="{{nHero.name}}"-->
+<!--        >-->
+<!--        <p [appHeroesCard]="'bold'" color="blueviolet" style="text-align: center">{{nHero.name}}</p>-->
+<!--    </div>-->
+<!--  </div>-->
 </div>
 
+<ng-template #loading>
+  <p class="text-center">loading...</p>
+</ng-template>
 <hr style="margin: 2rem auto">
 
-<app-post-hero
-  (onAdd)="updateHereos($event)">
+<app-post-hero>
 </app-post-hero>
-
-
 
